--- a/index.html
+++ b/index.html
@@ -19,16 +19,10 @@
     </header>
     <main>
       <div id="banner">
-        <div class="arrow">
-          <div class="arrow_right">
-            <img src="./assets/images/arrow_right.png" alt="arrow_right" id="right">
-          </div>
-          <div class="arrow_left">
-            <img src="./assets/images/arrow_left.png" alt="arrow_left" id="left">
-          </div>
-        </div>
         <img class="banner-img" src="./assets/images/slideshow/slide1.jpg" alt="Banner Print-it"/>
-        <p>Impressions tous formats <span>en boutique et en ligne</span></p>
+        <p class="text-image">Impressions tous formats <span>en boutique et en ligne</span></p>
+        <img src="assets/images/arrow_left.png" class="arrow arrow_left" alt="arrow left">
+        <img src="assets/images/arrow_right.png" class="arrow arrow_right" alt="arrow right">
         <div class="dots"></div>
       </div>
       <section id="about-us" class="container">
