--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
       <div id="banner">
         <img class="banner-img" src="./assets/images/slideshow/slide1.jpg" alt="Banner Print-it"/>
         <p class="text-image">Impressions tous formats <span>en boutique et en ligne</span></p>
-        <img src="assets/images/arrow_left.png" class="arrow arrow_left" alt="arrow left">
-        <img src="assets/images/arrow_right.png" class="arrow arrow_right" alt="arrow right">
+        <img src="./assets/images/arrow_left.png" class="arrow arrow_left" alt="arrow left">
+        <img src="./assets/images/arrow_right.png" class="arrow arrow_right" alt="arrow right">
         <div class="dots"></div>
       </div>
       <section id="about-us" class="container">
